# libobj

./: .gitignore  Makefile.am  README.md  configure.ac  obj-static.pc.in  obj.pc.in
examples/: Makefile.am  create-obj.c  parse-obj.c
examples/.deps/: create-obj.Po  parse-obj.Po
src/: Makefile.am  libobj-config.h.in  libobj.c  libobj.h
